hard-gists/3978039/run.log
=== Docker Run Log for 3978039 ===
Started at: Mi 29. Okt 14:07:11 CET 2025

[2025-10-29 14:07:12] START: Running container for 3978039
[2025-10-29 14:07:12] SUCCESS: Container 17239016137f8dc2c73500c61867b11e4a5b5584da220c97e1102b5ebbf74c45 started for 3978039
=== Container logs for 3978039 ===
  File "/snippet.py", line 23
    print "%s: %f" % (self.msg, elapsed)		
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3978039 ===
[2025-10-29 14:07:14] INFO: Container 17239016137f8dc2c73500c61867b11e4a5b5584da220c97e1102b5ebbf74c45 has stopped
